<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HelloAndroidWithLogin</string>
    <string name="username_string">UserName</string>
    <string name="password_string">Password</string>
    <string name="email_string">Email</string>
    <string name="enter_username_hint">Enter username</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="login_string">Login</string>
    <string name="hello">Hello Android!</string>
    <string name="say_hello">Say hello!</string>
    
</resources>
